--- a/order.html
+++ b/order.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="styles/order.css" />
-        <script src="script.js"></script>
     </head>
     <body>
         <header> 
@@ -36,11 +35,11 @@
                 </div>
                 <div class="size-select">
                     <label for="size">Size:</label>
-                    <input type="radio" value="small" id="small" name="size" required>
+                    <input type="radio" value="small" id="small" name="size" checked>
                     <label for = "small">Small</label>
-                    <input type="radio" value="medium" id="medium" name="size" required>
+                    <input type="radio" value="medium" id="medium" name="size">
                     <label for = "medium">Medium</label>
-                    <input type="radio" value="large" id="large" name="size" required>
+                    <input type="radio" value="large" id="large" name="size">
                     <label for = "large">Large</label>
                 </div>
                 <div class="submission">
