--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <p>$30(M)</br>$35(L)</p>
                         </div>  
                         <div class="drink">
-                            <img src = "./assets/iced-latte.jpg" alt="Iced Latte" title="" width="300" height="300">
+                            <img src = "./assets/iced-latte.jpg" alt="Iced Latte" title="IcedLatte" width="300" height="300">
                             <h3>Iced Latte</h3>
                             <p>$30(M)</br>$35(L)</p>
                         </div>
